# ISimU

./: .gitignore  CLAUDE.md  CLAUDE_backup.md  README.md  SDF_VALUE_SAVING_SUMMARY.md  pyproject.toml  todo-list.md
app/: README.md  app_interpolation_uns.py
data_UNS/: readme.md
data_VMR/: geo-flow.json  readme.md
data_matrix/: readme.md
doc/: performance_analysis_v0.2.txt
docs/: INTERPOLATION_UPDATE_SUMMARY.md  SDF_INTERPOLATION_UPDATE.md  data_processing.md  function_call_flow_diagram.md  geometry_reader_architecture.md  inference.md  neural_network.md  performance_analysis_v0.1.txt  performance_analysis_v0.2_64x64x64.txt  project_development_summary.md  utils.md
examples/: analysis_vtp_format.py  complete_64x64x64_interpolation.py  complete_pipeline.py  complete_pipeline_en.py  quick_start.py  test_32x32x32_quick_verification.py  test_64x64x64_new_paths.py  test_custom_interpolation.py  test_dense_48x48x48.py  test_dense_64x64x64.py  test_sdf_16x16x16_corrected.py  test_sdf_32x32x32_corrected.py  test_vmr_basic_integration.py  test_vmr_complete_workflow.py  test_vmr_interpolation.py  test_vmr_interpolator_integration.py  test_vmr_loader.py  test_vtk_reader.py  test_vtp_sdf.py  test_zero_assignment.py  verify_hdf5_results.py  verify_hdf5_vts_consistency.py
src/: __init__.py  data_reader.py  geometry_reader.py  interpolator.py  interpolator_optimized.py  sdf_utils.py  sdf_utils_enhanced.py  stl_reader.py  vmr_data_loader.py  vtp_reader.py
tests/: test_interpolation.py  test_vtp_export_verification.py  test_vtp_reader.py  test_vtp_sdf.py
(+30 files in other folders)
