[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isimu"
version = "0.1.0"
description = "Intelligent Simulation for UNS - CFD代理模型开发平台"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "vtk>=9.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "h5py>=3.1.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "matplotlib>=3.4.0",
    "trimesh>=4.9.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
